@@ -4,7 +4,11 @@
 <dtml-in "extraRoles">
     <role name="<dtml-var "_['sequence-item']">"/>
 </dtml-in>
+<!-- ##code-section roles -->
+<!-- ##/code-section roles -->
   </roles>
   <permissions>
+<!-- ##code-section permissions -->
+<!-- ##/code-section permissions -->
   </permissions>
 </rolemap>
